# django-registries

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
django_registries/: __about__.py  apps.py  registry.py
docs/: conf.py  index.rst  requirements_readthedocs.txt
tests/: settings.py  test_registry.py
tests/foo_implementation/: apps.py  foos.py
tests/foos/: apps.py  models.py  registry.py
tests/foos/migrations/: 0001_initial.py
