[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-registries"
description = 'django-registries is a structured way to create registries of implementations.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Víðir Valberg Guðmundsson", email = "valberg@orn.li" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "Django>=5.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://django-registries.readthedocs.io/"
Issues = "https://github.com/valberg/django-registries/issues"
Source = "https://github.com/valberg/django-registries"

[tool.hatch.version]
path = "django_registries/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_registries",
]

[project.optional-dependencies]
test = [
    "coverage[toml]>=7.9.1",
    "pytest>=8.4.1",
    "pytest-cov",
    "pytest-django",
    "mypy>=1.16.1",
    "django-stubs>=5.2.1",
]
docs = [
    "sphinx==8.1.3",
    "sphinx-autobuild==2024.10.3",
    "furo==2024.8.6",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--reuse-db"
norecursedirs = "build dist docs .eggs/* *.egg-info htmlcov django_registries .git"
python_files = "test*.py"
testpaths = "tests"
pythonpath = ". tests"

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "django_registries/__about__.py",
    "tests/manage.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "django_registries/"
exclude = [
    "venv/",
    "dist/",
    "docs/",
]
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true
follow_imports = "normal"
#plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
#django_settings_module = "tests.settings"

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
